--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -83,6 +83,7 @@
         <None Remove="ConfigMigrations\package20250801_0955.shaconfig" />
         <None Remove="ConfigMigrations\package20250805_0851.shaconfig" />
         <None Remove="ConfigMigrations\package20250811_1431.shaconfig" />
+        <None Remove="ConfigMigrations\package20250821_2018.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -133,6 +134,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250801_0955.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250805_0851.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250811_1431.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20250821_2018.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
