--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -84,11 +84,15 @@
         <None Remove="ConfigMigrations\package20250805_0851.shaconfig" />
         <None Remove="ConfigMigrations\package20250811_1431.shaconfig" />
         <None Remove="ConfigMigrations\package20250821_2018.shaconfig" />
+        <None Remove="ConfigMigrations\package20250827_1439.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
         <None Remove="ConfigMigrations\package20231105_1942.shaconfig" />
         <None Remove="ConfigMigrations\package20250805_1824.shaconfig" />
+    </ItemGroup>
+    <ItemGroup>
+      <ApplicationDefinition Include="ConfigMigrations\package20250827_1439.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="ConfigMigrations\package20240201_1221.shaconfig" />
