reconfigured eslint rules for configuration studio

--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -25,9 +25,9 @@
     "changelog:minor": "changelog -m && git add CHANGELOG.md && git commit -m \"updated CHANGELOG.md\" && npm version minor && git push origin",
     "changelog:patch": "changelog -p && git add CHANGELOG.md && git commit -m \"updated CHANGELOG.md\" && npm version patch && git push origin",
     "commit": "cz",
-    "lint": "eslint src/**/*.{j,t}s{,x}",
-    "lint-errors": "eslint src/**/*.{j,t}s{,x} --quiet",
-    "lint-fix": "eslint src/**/*.{j,t}s{,x} --fix",
+    "lint": "eslint",
+    "lint-errors": "eslint --quiet",
+    "lint-fix": "eslint --fix",
     "dev": "next dev",
     "build-next": "next build",
     "start-next": "NODE_ENV=production node --max-old-space-size=8192 server.js",
