enabled strictNullChecks for configuration-studio folder, enabled @typescript-eslint/strict-boolean-expressions and @typescript-eslint/no-unnecessary-condition eslint rules

--- a/shesha-reactjs/tsconfig.json
+++ b/shesha-reactjs/tsconfig.json
@@ -59,5 +59,10 @@
     "typings",
     "node_modules/@types",
     "models"
+  ],
+  "references": [
+    {
+      "path": "./src/configuration-studio"
+    }
   ]
 }
