minor tsconfig.json change

--- a/shesha-reactjs/src/configuration-studio/tsconfig.json
+++ b/shesha-reactjs/src/configuration-studio/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "strictNullChecks": true,
+    "strict": true,
+    "noImplicitAny": true,
     "composite": true
   },
   "include": [
     "**/*"
   ],
-  //"rootDir": "./",
 }
