chore: minor tsconfig change for configuration studio fixed some eslint rules in files

--- a/shesha-reactjs/src/configuration-studio/tsconfig.json
+++ b/shesha-reactjs/src/configuration-studio/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "strictNullChecks": true,
+    "strictPropertyInitialization": true,
     "strict": true,
     "noImplicitAny": true,
     "composite": true
