--- a/shesha-reactjs/src/configuration-studio/tsconfig.json
+++ b/shesha-reactjs/src/configuration-studio/tsconfig.json
@@ -1,10 +1,25 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
     "strict": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "forceConsistentCasingInFileNames": true,    
     "composite": true
   },
   "include": [
