--- a/shesha-reactjs/src/components/modelConfigurator/modelSettings.json
+++ b/shesha-reactjs/src/components/modelConfigurator/modelSettings.json
@@ -56,7 +56,6 @@
       "labelAlign": "right",
       "parentId": "root",
       "hidden": false,
-
       "isDynamic": false,
       "tabs": [
         {
@@ -66,7 +65,7 @@
           "key": "general",
           "components": [
             {
-              "mappings": "{\n  \"mapping\": [\n    { \n      \"code\": 1,\n      \"text\": \"Draft\", \n      \"color\": \"#b4b4b4\" \n    },\n    { \n      \"code\": 2,\n      \"text\": \"Ready\", \n      \"color\": \"#4DA6FF\" \n    },\n    { \n      \"code\": 3,\n      \"text\": \"Live\", \n      \"color\": \"#87d068\" \n      \n    },\n    { \n      \"code\": 4,\n      \"text\": \"Cancelled\", \n      \"color\": \"#cd201f\" \n      \n    },\n    { \n      \"code\": 5,\n      \"text\": \"Retired\",\n      \"color\": \"#FF7518\" \n    }\n  ],\n  \"default\": {\n    \"override\": \"NOT RECOGNISED\",\n    \"text\": \"NOT RECOGNISED\",\n    \"color\": \"#f50\"\n  }\n}",
+              "mappings": "{\n  \"mapping\": [\n    { \n      \"code\": 1,\n      \"text\": \"Draft\", \n      \"color\": \"#b4b4b4\" \n    },\n    { \n      \"code\": 2,\n      \"text\": \"Ready\", \n      \"color\": \"#4DA6FF\" \n    },\n    { \n      \"code\": 3,\n      \"text\": \"Live\", \n      \"color\": \"#87d068\" \n      \n    },\n    { \n      \"code\": 4,\n      \"text\": \"Cancelled\", \n      \"color\": \"#cd201f\" \n      \n    },\n    { \n      \"code\": 5,\n      \"text\": \"Retired\",\n      \"color\": \"#FF7518\" \n    }\n  ],\n  \"default\": {\n    \"override\": \"NOT RECOGNISED\",\n    \"text\": \"General\",\n    \"color\": \"#f50\"\n  }\n}",
               "id": "l9BiJ129QTUCQZK1dtTTLD3PoDmJB8",
               "type": "statusTag",
               "propertyName": "versionStatus",
@@ -489,7 +488,7 @@
           "selected": false
         }        
       ],
-      "defaultActiveKey": "details",
+      "defaultActiveKey": "general",
       "tabType": "line",
       "settingsValidationErrors": []
     }
