--- a/shesha-reactjs/src/components/modelConfigurator/propertiesEditor/renderer/propertySettings.json
+++ b/shesha-reactjs/src/components/modelConfigurator/propertiesEditor/renderer/propertySettings.json
@@ -441,7 +441,8 @@
           "customEnabled": "return data.source != 1;",
           "parentId": "gTpIAiV940w7puAHNwu5H",
           "validate": {},
-          "settingsValidationErrors": []
+          "settingsValidationErrors": [],
+          "hidden": {"_code": "return !getSettingValue(data?.referenceListNamespace);", "_mode": "code", "_value": false}
         }
       ]
     },
