Update shesha-io.shesha-framework-test.yml for Azure Pipelines

--- a/shesha-io.shesha-framework-test.yml
+++ b/shesha-io.shesha-framework-test.yml
@@ -103,7 +103,7 @@ stages:
     displayName: Build_Functional_Shesha_API
     dependsOn: 
       - Job_4
-      - UnitTests_1
+      #- UnitTests_1
     pool:
       name: Azure Pipelines
       vmImage: windows-latest
