--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -85,6 +85,7 @@
         <None Remove="ConfigMigrations\package20250811_1431.shaconfig" />
         <None Remove="ConfigMigrations\package20250821_2018.shaconfig" />
         <None Remove="ConfigMigrations\package20250827_1439.shaconfig" />
+        <None Remove="ConfigMigrations\package20250904_1206.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -139,6 +140,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250805_0851.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250811_1431.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250821_2018.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20250904_1206.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
