--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -94,7 +94,7 @@
     "@types/react-places-autocomplete": "^7.2.6",
     "@types/react-responsive": "^8.0.5",
     "@types/react-table": "^7.7.0",
-    "@types/redux-actions": "2.6.1",
+    "@types/redux-actions": "^2.6.5",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "antd": "^5.25.4",
@@ -125,7 +125,7 @@
     "react-sortablejs": "^6.1.4",
     "react-use": "^17.5.0",
     "react-use-debug-hooks": "^1.0.3",
-    "redux-actions": "2.6.5",
+    "redux-actions": "^3.0.3",
     "rimraf": "^5.0.10",
     "rollup": "^4.49.0",
     "rollup-plugin-local-resolve": "^1.0.7",
