--- a/shesha-core/src/Shesha.Web.Host/appsettings.json
+++ b/shesha-core/src/Shesha.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=.; Initial Catalog=function-shesha-test;Integrated Security=SSPI;TrustServerCertificate=True;"
+    "Default": "Server=localhost,1433;Initial Catalog=enterpriseproject;Persist Security Info=False;User ID=sa;Password=@123Shesha;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=60;"
   },
   "App": {
     "ServerRootAddress": "http://sheshacore-demo.boxfusion.co.za",
