--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -151,6 +151,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@react-awesome-query-builder/antd": "^6.5.2",
     "@scarf/scarf": "^1.3.0",
+    "@types/pluralize": "^0.0.33",
     "@types/react-beautiful-dnd": "^13.1.2",
     "ace-builds": "^1.17.0",
     "async-validator": "^3.5.2",
@@ -176,6 +177,7 @@
     "next": "^14.2.4",
     "number-to-words": "^1.2.4",
     "object-hash": "^3.0.0",
+    "pluralize": "^8.0.0",
     "point-in-polygon": "^1.1.0",
     "rc-picker": "^4.11.3",
     "react-ace": "^10.1.0",
