Update shesha-io.shesha-framework-test.yml for Azure Pipelines

--- a/shesha-io.shesha-framework-test.yml
+++ b/shesha-io.shesha-framework-test.yml
@@ -106,7 +106,7 @@ stages:
       #- UnitTests_1
     pool:
       name: Azure Pipelines
-      vmImage: ubuntu-latest
+      vmImage: windows-latest
     steps:
     - checkout: self
     - task: PowerShell@2
