Update shesha-io.shesha-framework-test.yml for Azure Pipelines
try to build on Windows to check release

--- a/shesha-io.shesha-framework-test.yml
+++ b/shesha-io.shesha-framework-test.yml
@@ -226,7 +226,7 @@ stages:
     dependsOn: Job_4
     displayName: Build_Functional_Shesha_AdminPortal
     pool:
-      vmImage: ubuntu-latest
+      vmImage: windows-latest
     steps:
     - task: PowerShell@2
       displayName: Check if Pull Request
