--- a/.github/workflows/npm-build-test.yml
+++ b/.github/workflows/npm-build-test.yml
@@ -33,5 +33,5 @@ jobs:
 
       - name: Build
         id: build
-        run: npm run build -- --max-old-space-size=8192
+        run: node --max-old-space-size=16384 node_modules/.bin/eslint --quiet && rimraf dist && node --max-old-space-size=16384 node_modules/.bin/rollup -c && node --max-old-space-size=16384 node_modules/.bin/tsc-alias
         
