--- a/shesha-io.shesha-framework-test.yml
+++ b/shesha-io.shesha-framework-test.yml
@@ -262,6 +262,7 @@ stages:
           # Write your PowerShell commands here.
           write-host "The current branch is: $(currentBranch)"
           write-host "The current version is: $(versionNo)"
+          write-host "NODE_OPTIONS is: $env:NODE_OPTIONS"
         workingDirectory: 'shesha-functional-tests/adminportal'
     - task: NodeTool@0
       displayName: 'Use Node 21.x'
