--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -88,6 +88,7 @@
         <None Remove="ConfigMigrations\package20250915_1416.shaconfig" />
         <None Remove="ConfigMigrations\package20250909_1553.shaconfig" />
         <None Remove="ConfigMigrations\package20250922_0858.shaconfig" />
+        <None Remove="ConfigMigrations\package20250926_1642.shaconfig" />
         <None Remove="ConfigMigrations\package20250926_1654.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
@@ -144,6 +145,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250915_1416.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250909_1553.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250922_0858.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20250926_1642.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250926_1654.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
