--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -156,6 +156,7 @@
     "@scarf/scarf": "^1.3.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "ace-builds": "^1.17.0",
+    "antd-phone-input": "^0.3.14",
     "async-validator": "^3.5.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "camelcase-keys": "^9.1.3",
