--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -105,6 +105,8 @@
     "config": "^3.3.9",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.34.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsdoc": "^54.1.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
