feat: Configuration Studio routing and new nodes
- implemented Home and Settings nodes in Configuration Studio
- ShaRoutingProvider converted to use class instance
- FormPersisterProvider converted to FormPersister to solve re-rendering issues
- implemented routing in the Configuration Studio
- other bugfixes

--- a/shesha-reactjs/tsconfig.base.json
+++ b/shesha-reactjs/tsconfig.base.json
@@ -30,6 +30,7 @@
     "strictNullChecks": false,
     "strictPropertyInitialization": false,
     "target": "ESNext",
+    "noEmitOnError": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
