--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -100,7 +100,7 @@
     "@types/redux-actions": "2.6.1",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
-    "antd": "5.17.4",
+    "antd": "5.25.4",
     "antd-style": "^3.6.2",
     "axios": "^1.7.2",
     "camelcase": "^6.2.0",
@@ -173,6 +173,7 @@
     "jodit-react": "^4.1.2",
     "js-encoding-utils": "^0.6.2",
     "just-curry-it": "^5.3.0",
+    "libphonenumber-js": "^1.12.24",
     "localforage": "^1.10.0",
     "monaco-editor": "0.50.0",
     "mustache": "^4.2.0",
