refactor: form utils refactoring
- moved js-settings and scripts utils to separate files
- types review
- code cleanup

--- a/shesha-reactjs/tsconfig.json
+++ b/shesha-reactjs/tsconfig.json
@@ -13,6 +13,7 @@
       { "path": "./src/providers/auth" },
       { "path": "./src/providers/appConfigurator" },
       { "path": "./src/providers/dataContextManager" },
-      { "path": "./src/providers/dataContextProvider" }
+      { "path": "./src/providers/dataContextProvider" },
+      { "path": "./src/providers/form/utils" }
   ]
 }
