--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -93,6 +93,8 @@
         <None Remove="ConfigMigrations\package20250926_1654.shaconfig" />
         <None Remove="ConfigMigrations\package20251017_0924.shaconfig" />
         <None Remove="ConfigMigrations\package20251026_0913.shaconfig" />
+        <None Remove="ConfigMigrations\package20251026_1129.shaconfig" />
+        <None Remove="ConfigMigrations\package20251026_1137.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -152,7 +154,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250926_1642.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250926_1654.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251017_0924.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20251026_0913.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20251026_1137.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
